--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-
 body {
     font-family: "Neuton", serif;
     font-weight: 200;
@@ -12,7 +11,7 @@ body {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    
+
 }
 
 div {
@@ -23,7 +22,8 @@ div {
     border-radius: 50px;
 }
 
-li, a{
+li,
+a {
     font-family: "Noto Sans", serif;
     font-weight: 500;
     font-size: 16px;
@@ -58,7 +58,7 @@ li, a{
 
 button {
     padding: 9px 25px;
-    background-color: rgba(208, 221, 208,1);
+    background-color: rgba(208, 221, 208, 1);
     border: none;
     border-radius: 50px;
     cursor: pointer;
@@ -66,7 +66,7 @@ button {
 }
 
 button:hover {
-    background-color:rgba(208, 221, 208,0.8);
+    background-color: rgba(208, 221, 208, 0.8);
 }
 
 h1 {
@@ -154,13 +154,21 @@ p {
     }
 
     .about-me-grid {
-        grid-template-columns: 1fr;
+        grid-template-columns: 0.5fr;
+        grid-template-rows: 0.5fr;
+        margin: 0;
+        padding: 0;
         text-align: center;
     }
 
     .profile-pic {
         max-width: 100%;
         height: auto;
+    }
+
+    .navbar {
+        display: flex;
+        flex-direction: column;
     }
 
 }
@@ -195,6 +203,6 @@ p {
     font-size: 2.5rem;
 }
 
-footer a{
-   margin: 10px 20px;
+footer a {
+    margin: 10px 20px;
 }
